--- a/.github/workflows/Lunix.yml
+++ b/.github/workflows/Lunix.yml
@@ -26,22 +26,22 @@ jobs:
           wget -q https://sourceforge.net/projects/turbovnc/files/3.0.3/turbovnc_3.0.3_amd64.deb
           sudo apt install -y ./turbovnc_3.0.3_amd64.deb
 
-          # Create VNC password
+          # Create VNC directory & password
           sudo -u ${USERNAME} mkdir -p /home/${USERNAME}/.vnc
           echo "${PASSWORD}" | vncpasswd -f | sudo -u ${USERNAME} tee /home/${USERNAME}/.vnc/passwd > /dev/null
           sudo chmod 600 /home/${USERNAME}/.vnc/passwd
 
-          # TurboVNC startup file (KDE Plasma)
+          # KDE Plasma startup (Escape $HOME)
           cat <<EOF | sudo -u ${USERNAME} tee /home/${USERNAME}/.vnc/xstartup
 #!/bin/bash
-export XAUTHORITY=$HOME/.Xauthority
+export XAUTHORITY=\$HOME/.Xauthority
 export DISPLAY=:1
 startplasma-x11 &
 EOF
 
           sudo chmod +x /home/${USERNAME}/.vnc/xstartup
 
-          # Start TurboVNC on :1
+          # Start TurboVNC
           sudo -u ${USERNAME} vncserver :1 -geometry 1280x720 -depth 24
 
       - name: Install Ngrok
@@ -49,15 +49,15 @@ EOF
           curl -sSL https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.tgz | sudo tar -xzv -C /usr/local/bin
           ngrok config add-authtoken ${NGROK_AUTH_TOKEN}
 
-      - name: Start Ngrok Tunnel (TurboVNC port 5901)
+      - name: Start Ngrok Tunnel
         run: |
           nohup ngrok tcp 5901 --region=in > /dev/null 2>&1 &
           sleep 8
-          echo "Ngrok TCP tunnel is active."
+          echo "Ngrok tunnel active."
 
       - name: Keep Alive
         run: |
           while true; do
-            echo "GUI session active at $(date)"
+            echo "Running at $(date)"
             sleep 600
           done
