--- a/.github/workflows/Lunix.yml
+++ b/.github/workflows/Lunix.yml
@@ -17,21 +17,24 @@ jobs:
           echo "${USERNAME}:${PASSWORD}" | sudo chpasswd
           echo "${USERNAME} ALL=(ALL) NOPASSWD:ALL" | sudo tee /etc/sudoers.d/${USERNAME}
 
-      - name: Install KDE + TurboVNC
+      - name: Install KDE X11 + TurboVNC (same as XRDP requires)
         run: |
           sudo apt-get update -qq
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y -qq kde-plasma-desktop curl xorg dbus-x11
+
+          # Install KDE X11 version
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
+            plasma-desktop kde-standard xorg dbus-x11 curl
 
           # Install TurboVNC
           wget -q https://sourceforge.net/projects/turbovnc/files/3.0.3/turbovnc_3.0.3_amd64.deb
           sudo apt install -y ./turbovnc_3.0.3_amd64.deb
 
-          # Create VNC directory & password
+          # Create VNC password
           sudo -u ${USERNAME} mkdir -p /home/${USERNAME}/.vnc
           echo "${PASSWORD}" | vncpasswd -f | sudo -u ${USERNAME} tee /home/${USERNAME}/.vnc/passwd > /dev/null
           sudo chmod 600 /home/${USERNAME}/.vnc/passwd
 
-          # Clean KDE xstartup (NO XAUTHORITY, NO DISPLAY)
+          # EXACT XRDP-style startup
           cat <<EOF | sudo -u ${USERNAME} tee /home/${USERNAME}/.vnc/xstartup
 #!/bin/bash
 startplasma-x11 &
@@ -39,7 +42,7 @@ EOF
 
           sudo chmod +x /home/${USERNAME}/.vnc/xstartup
 
-          # Start TurboVNC server
+          # Start TurboVNC
           sudo -u ${USERNAME} vncserver :1 -geometry 1280x720 -depth 24
 
       - name: Install Ngrok
